--- a/index.html
+++ b/index.html
@@ -1,87 +1,57 @@
-<!-- Poolball GMs Project -->
-<!-- WELCOME/LANDING PAGE -->
-
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="src/pages/index.css" />
-    <link rel="stylesheet" href="src/pages/resources.css" />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meme Generator</title>
 
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #4CAF50;
+            text-align: center;
+        }
 
-    <title>Poolball GMs</title>
+        #app {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #ffa;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
 
-    <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="src/public/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="src/public/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="src/public/favicon-16x16.png" />
-    <link rel="manifest" href="src/public/site.webmanifest" />
-    <link rel="mask-icon" href="src/public/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-  </head>
+        h1 {
+            color: #333;
+        }
 
-  <!-- HTML site body -->
-  <body>
-    <audio playsinline id="song">
-      <source src="src/public/openingSong1.mp3" type="audio/mpeg" />
-      <source src="src/public/openingSong1.ogg" type="audio/ogg" />
-    </audio>
+        #inputText {
+            width: 80%;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
 
-    <script src="src/pages/index.js" type="module"></script>
+        button {
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-    <img src="src/public/audio.png" id="audio-btn" />
-
-    <div class="container text-center d-flex flex-column h-100">
-      <div class="row">
-        <div class="col">
-          <h1 class="title">Poolball GMs</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <img src="src/public/logowhite.png" alt="poolball" class="ball img-fluid no-interact" />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col pt-5">
-          <a href="src/pages/login.html"><button class="button">Log In</button></a>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col mt-2">
-          <a href="src/pages/league.html" class="guest">View as Guest</a>
-        </div>
-      </div>
+        #memeContainer {
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div id="app">
+        <h1>Meme Generator</h1> <!-- Added title -->
+        <input type="text" id="inputText" placeholder="Enter your phrase">
+        <button onclick="generateMeme()">Generate Meme</button>
+        <div id="memeContainer"></div>
     </div>
-
-    <!-- Popup -->
-    <div class="popup align-items-center" id="popup">
-      <div class="popup-info container align-items-center text-center d-flex flex-column">
-        Poolball GMs is currently in development.
-        <br />
-        There may be bugs or missing functionality in any part of the game.
-        <button id="popup-btn">I Understand</button>
-      </div>
-    </div>
-
-    <!-- Footer -->
-    <footer>
-      <ul>
-        <li>
-          <a href="https://discord.com/channels/872517520341467146/872518021057495140" target="”_blank”">
-            <img src="src/public/Discord-Logo-White.png" class="media" />
-          </a>
-        </li>
-
-        <li>
-          <a href="https://github.com/ItsMeToast/ProjectPoolball" target="”_blank”">
-            <img src="src/public/GitHub-Logo-White.png" class="media" />
-          </a>
-        </li>
-      </ul>
-    </footer>
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
